changes seconds to ms

--- a/[4]support_vector_machine.ipynb
+++ b/[4]support_vector_machine.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to Train --> 1.0842 seconds\n"
+      "Time to Train --> 971.898 ms\n"
      ]
     }
    ],
@@ -262,20 +262,20 @@
     "svm.fit(x_train, y_train)\n",
     "\n",
     "# Time to train\n",
-    "time_to_train = round(time.time() - start_time, 4)\n",
-    "print(f'Time to Train --> {time_to_train} seconds')"
+    "time_to_train = round((time.time() - start_time)*1000, 3)\n",
+    "print(f'Time to Train --> {time_to_train} ms')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inference time --> 0.2019 seconds\n"
+      "Inference time --> 190.078 ms\n"
      ]
     }
    ],
@@ -287,13 +287,13 @@
     "predictions = svm.predict(x_test)\n",
     "\n",
     "# Inference time\n",
-    "inference_time = round(time.time() - start_time, 4)\n",
-    "print(f'Inference time --> {inference_time} seconds')"
+    "inference_time = round((time.time() - start_time)*1000, 3)\n",
+    "print(f'Inference time --> {inference_time} ms')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +372,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage increase for F1 score with stroke --> 16.572%\n",
+      "Percentage increase for F1 score without stroke --> 19.082%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# percentage improvement due to hyperparameter tuning\n",
+    "score_increase_stroke = round(((f1_score_stroke_hp_tuning - f1_score_stroke_vanilla)/f1_score_stroke_vanilla)*100, 3)\n",
+    "score_increase_no_stroke = round(((f1_score_no_stroke_hp_tuning - f1_score_no_stroke_vanilla)/f1_score_no_stroke_vanilla)*100, 3)\n",
+    "\n",
+    "print(f'Percentage increase for F1 score with stroke --> {score_increase_stroke}%')\n",
+    "print(f'Percentage increase for F1 score without stroke --> {score_increase_no_stroke}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -385,8 +408,11 @@
       "96.355\n",
       "96.304\n",
       "---------------------------------\n",
-      "1.0842\n",
-      "0.2019\n"
+      "16.572\n",
+      "19.082\n",
+      "---------------------------------\n",
+      "971.898\n",
+      "190.078\n"
      ]
     }
    ],
@@ -396,6 +422,9 @@
     "print('---------------------------------')\n",
     "print(f1_score_stroke_hp_tuning)\n",
     "print(f1_score_no_stroke_hp_tuning)\n",
+    "print('---------------------------------')\n",
+    "print(score_increase_stroke)\n",
+    "print(score_increase_no_stroke)\n",
     "print('---------------------------------')\n",
     "print(time_to_train)\n",
     "print(inference_time)"
@@ -412,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,9 +453,16 @@
     "json_dict['svm'] = {\n",
     "    \"scores_vanilla\":{\"with_stroke\":f1_score_stroke_vanilla, \"without_stroke\":f1_score_no_stroke_vanilla},\n",
     "    \"scores_after_hp_tuning\":{\"with_stroke\":f1_score_stroke_hp_tuning, \"without_stroke\":f1_score_no_stroke_hp_tuning},\n",
-    "    \"time\":{\"time_to_train_final_model\":time_to_train, \"inference_time_on_final_model\":inference_time}}\n",
-    "\n",
-    "# write to it\n",
+    "    \"percentage_increase\":{\"with_stroke\":score_increase_stroke, \"without_stroke\":score_increase_no_stroke},\n",
+    "    \"time\":{\"time_to_train_final_model\":time_to_train, \"inference_time_on_final_model\":inference_time}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('data.json', 'w') as fp:\n",
     "    json.dump(json_dict, fp,  indent=4)"
    ]
