--- a/[3]knn.ipynb
+++ b/[3]knn.ipynb
@@ -251,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to Train --> 0.0028 seconds\n"
+      "Time to Train --> 3.006 ms\n"
      ]
     }
    ],
@@ -273,20 +273,20 @@
     "k_nearest_neighbours.fit(x_train, y_train)\n",
     "\n",
     "# Time to train\n",
-    "time_to_train = round(time.time() - start_time, 4)\n",
-    "print(f'Time to Train --> {time_to_train} seconds')"
+    "time_to_train = round((time.time() - start_time)*1000, 3)\n",
+    "print(f'Time to Train --> {time_to_train} ms')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inference time --> 0.2441 seconds\n"
+      "Inference time --> 203.736 ms\n"
      ]
     }
    ],
@@ -298,13 +298,13 @@
     "predictions = k_nearest_neighbours.predict(x_test)\n",
     "\n",
     "# Inference time\n",
-    "inference_time = round(time.time() - start_time, 4)\n",
-    "print(f'Inference time --> {inference_time} seconds')"
+    "inference_time = round((time.time() - start_time)*1000, 3)\n",
+    "print(f'Inference time --> {inference_time} ms')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -422,8 +422,8 @@
       "0.332\n",
       "0.328\n",
       "---------------------------------\n",
-      "0.0028\n",
-      "0.2441\n"
+      "3.006\n",
+      "203.736\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
