--- a/[3]knn.ipynb
+++ b/[3]knn.ipynb
@@ -796,7 +796,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data.json', 'w') as fp:\n",
+    "with open('results.json', 'w') as fp:\n",
     "    json.dump(json_dict, fp,  indent=4)"
    ]
   }
